# scaler_open_env

./: .gitignore  Dockerfile  README.md  baseline_scores.json  client.py  http_client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  graders.py  network_generator.py  requirements.txt  reward.py  state_machine.py  tasks.py  vulnnet_environment.py
